--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,8 @@ dependencies:
   provider: ^6.0.5
   http: ^1.1.0
   shared_preferences: ^2.2.2
-  firebase_core: ^2.17.0
-  firebase_messaging: ^14.6.9
+  # firebase_core: ^2.17.0
+  # firebase_messaging: ^14.6.9
 
 dev_dependencies:
   flutter_test:
